--- a/css/styles.css
+++ b/css/styles.css
@@ -1069,7 +1069,7 @@ img {
 }
 
 .flex-list {
-  width: 396px;
+  max-width: 396px;
   height: 400px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -1197,20 +1197,6 @@ img {
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
 }
-
-/* 
-.flex-list {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-
-.flex-case {
-  position: relative;
-  display: block;
-  width: inherit;
-  height: inherit;
-}
-
- */
 
 /* =============================MODAL============================= */
 
