--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,6 @@ img {
   margin-right: auto;
   margin-left: auto;
   max-width: 428px;
-  max-height: 432px;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
@@ -1075,7 +1074,7 @@ img {
 }
 
 .portfolio-overlay {
-  background-color: linear-gradient(
+  background-image: linear-gradient(
     0deg,
     rgba(77, 90, 229, 0.1),
     rgba(77, 90, 229, 0.1)
@@ -1108,7 +1107,7 @@ img {
 
 .overlay {
   position: absolute;
-  transform: translate(0, 100%);
+  transform: translate(0, 101%);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
