--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ img {
   background-position: center;
   margin-right: auto;
   margin-left: auto;
-  max-width: 428px;
+  max-width: 100%;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
@@ -798,6 +798,10 @@ img {
     margin-top: 40px;
   }
 
+  .list-advantages .items {
+    text-align: left;
+  }
+
   .advantages-items {
     display: none;
   }
@@ -1227,8 +1231,8 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 408px;
-  height: 584px;
+  max-width: 408px;
+  min-height: 584px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
