--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ img {
   background-position: center;
   margin-right: auto;
   margin-left: auto;
-  max-width: 100%;
+  max-width: 428px;
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
@@ -561,7 +561,7 @@ img {
     padding-bottom: 40px;
     padding-left: 40px;
     padding-right: 16px;
-
+    overflow-y: auto;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -798,12 +798,12 @@ img {
     margin-top: 40px;
   }
 
-  .list-advantages .items {
-    text-align: left;
-  }
-
   .advantages-items {
     display: none;
+  }
+
+  .list-advantages .items {
+    text-align: left;
   }
 
   .list-container {
@@ -1214,7 +1214,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-
+  overflow-y: auto;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1227,6 +1227,7 @@ img {
 }
 
 .modal {
+  overflow-y: auto;
   position: absolute;
   top: 50%;
   left: 50%;
